--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSN - CSE Intern Tracker</title>
     <link rel="stylesheet" href="/loginstyle.css">
+    <link rel="icon" type="image/png" href="/ssn-logo.png">
+
 </head>
 <body>
 
