--- a/views/update-details.ejs
+++ b/views/update-details.ejs
@@ -38,7 +38,7 @@
             </div>
             <div class="form-group">
               <label for="internshipObtainedOrNot">Internship Obtained?</label>
-              <select id="internshipObtainedOrNot" name="intershipObtainedOrNot" class="form-control" required>
+              <select id="internshipObtainedOrNot" name="internshipObtainedOrNot" class="form-control" required>
                 <option value="Yes" <%= studentData[5] === 'Yes' ? 'selected' : '' %>>Yes</option>
                 <option value="No" <%= studentData[5] === 'No' ? 'selected' : '' %>>No</option>
               </select>
