--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -25,7 +25,7 @@
         <div class="options">
             <a href="/student" class="btn">📌 Fill Internship Form</a>
             <a href="/view-details" class="btn">📄 View Submitted Details</a>
-            <a href="/update-details" class="btn" style="pointer-events: none; opacity: 0.6; cursor: not-allowed;">✏️ Edit Submitted Details</a>
+            <a href="/update-details" class="btn edit">✏️ Edit Submitted Details</a>
             <a href="/student/my-doubts" class="btn">🤷‍♀️ Ask Doubts</a>
             <a href="/logout" class="btn logout-btn">🚪 Logout</a>
         </div>
