--- a/public/loginstyle.css
+++ b/public/loginstyle.css
@@ -15,7 +15,11 @@ body {
     height: 100vh;
     background-color: #f7f7f7;
     background-image: url("https://www.ssn.edu.in/wp-content/uploads/2020/02/camp.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
+
 
 .login-container {
     background: linear-gradient(135deg, #6a11cb, #2575fc);
