--- a/public/loginstyle.css
+++ b/public/loginstyle.css
@@ -15,7 +15,7 @@ body {
     min-height: 100vh;
     margin: 0;
     background-color: #f7f7f7;
-    background-image: url("https://www.ssn.edu.in/wp-content/uploads/2020/02/camp.png");
+    background-image: url("https://lms.ssn.edu.in/pluginfile.php/1/theme_boost/backgroundimage/1746527939/Vamasundari-Park.jpg");
     background-repeat: no-repeat;
     background-size: contain;         /* Prevents cropping, fits image within view */
     background-position: center;
