--- a/public/loginstyle.css
+++ b/public/loginstyle.css
@@ -17,7 +17,7 @@ body {
     background-color: #f7f7f7;
     background-image: url("https://lms.ssn.edu.in/pluginfile.php/1/theme_boost/backgroundimage/1746527939/Vamasundari-Park.jpg");
     background-repeat: no-repeat;
-    background-size: contain;         /* Prevents cropping, fits image within view */
+    /* background-size: contain;         Prevents cropping, fits image within view */
     background-position: center;
     background-attachment: fixed;     /* Optional: keeps background still on scroll */
 }
