--- a/public/loginstyle.css
+++ b/public/loginstyle.css
@@ -15,13 +15,13 @@ body {
     min-height: 100vh;
     margin: 0;
     background-color: #f7f7f7;
-
-    background-image: url(image1.png);
+    background-image: url("image1.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
   }
+
 
 .login-container {
     background: linear-gradient(135deg, #6a11cb, #2575fc);
